--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,41 @@
-.App {
-  text-align: center;
+.app-wrapper {
+	margin: 0 auto;
+	display: grid;
+	width: 90%;
+	grid-template-areas: 
+	"header header" 
+	"nav profile";
+
+	grid-template-rows: 15% 1fr;
+	grid-template-columns: 1.5fr 10fr;
+	grid-gap: 10px;
+
+	
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.header {
+	grid-area: header;
+	background: blue;
+}
+.header img {
+	width: 5%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.nav {
+	grid-area: nav;
+	background: rgba(84, 18, 192, 0.938);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.nav a{
+	color: white
 }
 
-.App-link {
-  color: #61dafb;
+.profile {
+	grid-area: profile;
+	background: rgb(35, 150, 121);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.profile img{
+	
+	width: 30%
 }
