--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -1,1 +1,20 @@
+.dialogs {
+	display: grid;
+	grid-template-columns: 2fr 10fr;
+}
 
+.dialogsItems {
+	padding: 5%;
+}
+
+
+.dialogsItems .active{
+	color: gold;
+}
+.messages {
+	padding: 1%;
+}
+
+.messages .message {
+	
+}
