--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -4,12 +4,22 @@
 	padding:10%;
 }
 
+.item{
+	color:white;
+}
+
 .item a{
 	color: white;
-
 	text-decoration: none;
 }
+
 .item a.activeLink {
 	color: gold;
+}
+
+.sidebar{
+	margin-top: 15%;
+	font-size: 20px;
+	text-align: center;
 }
 
