--- a/src/components/Users/users.module.css
+++ b/src/components/Users/users.module.css
@@ -2,3 +2,18 @@
 	width: 50px;
 	height: 50px;
 }
+
+.selectedPage{
+	font-weight: bold;
+	
+}
+
+.pageNumber {
+	cursor: pointer;
+	padding:3% 0px 3% 0px;
+	text-align: center;
+	display: grid;
+	grid-template-rows: 0.1fr 1fr;
+	grid-template-columns: repeat(25, 1fr);
+
+}
