--- a/src/components/Common/FormsControls/FormsControls.module.css
+++ b/src/components/Common/FormsControls/FormsControls.module.css
@@ -6,3 +6,9 @@
 .formsControls.error span {
 	color: rgb(134, 24, 24)
 }
+
+.formSummaryError {
+	border: 2px solid rgb(134, 24, 24);
+	color: white;
+	background-color:rgb(134, 24, 24);
+}
